<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="invalid_date">Date must be between %1$s and %2$s.</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="month_name_format">MMMM yyyy</string>
    <string name="UMAppUpdate">App updating</string>
    <string name="UMBreak_Network">Please make sure you are connected to internet,update failed</string>
    <string name="UMDialog_InstallAPK">The lastest version has been downloaded, install now ?</string>
    <string name="UMGprsCondition">(Warning: Not WIFI Condition)</string>
    <string name="UMIgnore">Ingore this</string>
    <string name="UMNewVersion">Latest version:</string>
    <string name="UMNotNow">Not now</string>
    <string name="UMTargetSize">Target size:</string>
    <string name="UMToast_IsUpdating">Updating....</string>
    <string name="UMUpdateContent">Update Content</string>
    <string name="UMUpdateNow">Update now</string>
    <string name="UMUpdateSize">Update size:</string>
    <string name="UMUpdateTitle">New version found</string>
    <string name="actionbar_activity_not_found">Failed to open intent…</string>
    <string name="douban">豆瓣</string>
    <string name="dropbox">Dropbox</string>
    <string name="email">邮件</string>
    <string name="evernote">印象笔记</string>
    <string name="facebook">Facebook</string>
    <string name="flickr">Flickr</string>
    <string name="foursquare">FourSquare</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="googleplus">Google+</string>
    <string name="instagram">Instagram</string>
    <string name="instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="intro">The webview before show js call Umeng Analytics APIs</string>
    <string name="kaixin">开心网</string>
    <string name="line">Line</string>
    <string name="line_client_inavailable">目前您的Line版本过低或未安装易信，需要安装Line才能使用</string>
    <string name="linkedin">领英</string>
    <string name="mingdao">明道</string>
    <string name="mingdao_share_content">网页分享</string>
    <string name="neteasemicroblog">网易微博</string>
    <string name="pinterest">Pinterest</string>
    <string name="pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="qq">QQ</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="qzone">QQ空间</string>
    <string name="renren">人人网</string>
    <string name="share_to_mingdao">分享到明道</string>
    <string name="share_to_qq">分享到QQ</string>
    <string name="share_to_qzone">分享到QQ空间</string>
    <string name="share_to_qzone_default">来自%s的分享</string>
    <string name="shortmessage">信息</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="sohumicroblog">搜狐微博</string>
    <string name="sohusuishenkan">搜狐随身看</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="tumblr">Tumblr</string>
    <string name="twitter">Twitter</string>
    <string name="umeng_common_action_cancel">Cancel</string>
    <string name="umeng_common_action_continue">Continue</string>
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_action_pause">Pause</string>
    <string name="umeng_common_download_failed">Download Failed!</string>
    <string name="umeng_common_download_finish">Download finished,click to install it.</string>
    <string name="umeng_common_download_notification_prefix">Downloading:</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_common_patch_finish">Patch finished,click to install it.</string>
    <string name="umeng_common_pause_notification_prefix">Pause:</string>
    <string name="umeng_common_silent_download_finish">New version is ready,click to install it.</string>
    <string name="umeng_common_start_download_notification">Download start.</string>
    <string name="umeng_common_start_patch_notification">Patch start.</string>
    <string name="umeng_example_fb_home_btn_simple">Simple Demo</string>
    <string name="umeng_example_home_btn_ad">Ads</string>
    <string name="umeng_example_home_btn_analytics">Analytics</string>
    <string name="umeng_example_home_btn_fb">Feedback</string>
    <string name="umeng_example_home_btn_plus">Socialize</string>
    <string name="umeng_example_home_btn_tools">Tools</string>
    <string name="umeng_example_home_btn_update">Update</string>
    <string name="umeng_example_home_btn_xp">XP</string>
    <string name="umeng_example_home_btn_xp_ufp">Umeng For Publisher</string>
    <string name="umeng_example_home_hint_wait">Coming soooooon</string>
    <string name="umeng_example_xp_home_btn_banner">Banner</string>
    <string name="umeng_example_xp_home_btn_banner_ufp">"Banner
(UFP)"</string>
    <string name="umeng_example_xp_home_btn_container">Container</string>
    <string name="umeng_example_xp_home_btn_container_header">LargeImage</string>
    <string name="auto_popup_text_true">UmengUpdateAgent.setUpdateAutoPopup(true);</string>
    <string name="auto_update">自动更新</string>
    <string name="auto_update_code">UmengUpdateAgent.update(context);</string>
    <string name="btn_check">检测更新</string>
    <string name="btn_default">恢复默认</string>
    <string name="btn_download_file">查找已下载文件</string>
    <string name="btn_ignore_update">忽略更新</string>
    <string name="btn_is_ignore">确认忽略版本</string>
    <string name="btn_show_dialog">显示对话框</string>
    <string name="btn_show_notification">显示通知栏</string>
    <string name="btn_show_ui">自定义提示</string>
    <string name="btn_start_download">开始下载</string>
    <string name="btn_start_install">开始安装</string>
    <string name="cancel">取消</string>
    <string name="code_space">\u0009</string>
    <string name="default_text">UmengUpdateAgent.setDefault();</string>
    <string name="delta_text_true">UmengUpdateAgent.setDeltaUpdate(true);</string>
    <string name="dialog_listener_null">UmengUpdateAgent.setDialogListener(null);</string>
    <string name="dialog_listener_text">设置对话框按键回调</string>
    <string name="dialog_text">UpdateStatus.STYLE_DIALOG</string>
    <string name="download_file_code">UmengUpdateAgent.downloadedFile(context, response);</string>
    <string name="download_listener_null">UmengUpdateAgent.setDownloadListener(null);</string>
    <string name="download_listener_text">设置下载回调</string>
    <string name="false_text">false</string>
    <string name="force_update">手动更新</string>
    <string name="ignore_update_code">UmengUpdateAgent.ignoreUpdate(context, response);</string>
    <string name="is_ignore_code">UmengUpdateAgent.isIgnore(context, response);</string>
    <string name="manual_update_code">UmengUpdateAgent.forceUpdate(context);</string>
    <string name="manual_update_text1">手动更新示例，该情景模式下，无论处于wifi环境还是移动网络环境，都会去检测更新，并且即使用户忽略了该版本也会弹出对话框提示更新，只需要一行代码就可以实现:</string>
    <string name="notification_text">UpdateStatus.STYLE_NOTIFICATION</string>
    <string name="ok">确定</string>
    <string name="prompt">提示</string>
    <string name="rich_notification_text_true">UmengUpdateAgent.setRichNotification(true);</string>
    <string name="show_dialog_code">UmengUpdateAgent.showUpdateDialog(context, response);</string>
    <string name="show_notification_code">UmengUpdateAgent.showUpdateNotification(context, response);</string>
    <string name="silent_update">静默下载</string>
    <string name="start_download_code">UmengUpdateAgent.startDownload(context, response);</string>
    <string name="start_install_code">UmengUpdateAgent.startInstall(context, file);</string>
    <string name="style_text_dialog">UmengUpdateAgent.setUpdateUIStyle(UpdateStatus.STYLE_DIALOG);</string>
    <string name="true_text">true</string>
    <string name="update_callback_text3">您可以设置更新回调来监听到检测更新的返回结果，自己处理检测更新的结果。</string>
    <string name="update_callback_text4">您可以设置对话框按键回调接口来监听用户的按键操作，对于选择使用通知栏提醒用户更新的方式，该回调函数监听点击通知栏后弹出的对话框按键操作。</string>
    <string name="update_callback_text5">您可以设置下载回调接口，这样在自动更新下载APK开始，进行，结束或者失败的时候，可以使用该接口来做出相应的反应。</string>
    <string name="update_code_end">}</string>
    <string name="update_custom">自定义UI</string>
    <string name="update_default">默认UI</string>
    <string name="update_listener_null">UmengUpdateAgent.setUpdateListener(null);</string>
    <string name="update_listener_text">设置更新回调</string>
    <string name="update_process_text1">您可以自定义提醒更新的UI交互，通过设置更新回调和我们提供的功能函数也可以完成全部更新功能。下面展示完全自定义的更新流程：</string>
    <string name="update_process_text2">首先您需要关闭自动弹窗，避免重复弹出提示。</string>
    <string name="update_process_text3">您需要设置更新回调，来监听检测更新返回的结果，进行相应的处理。</string>
    <string name="update_process_text4">现在检测更新，来检测是否有新版本。</string>
    <string name="update_process_text5">检测更新返回的结果:</string>
    <string name="update_process_text6">现在您可以使用我们默认的UI展现方式来提示更新，并自动完成后续所有相应，也可以完全自己来处理更新提示和更新流程。</string>
    <string name="update_process_text7">默认提供了两种方式来展示更新提示：</string>
    <string name="update_process_text8">您也可以通过这些方法来获取到展示更新信息需要的信息来自定义更新提示界面：</string>
    <string name="update_process_text9">您可以根据这些信息构建自己的通知提示。</string>
    <string name="update_result_yes">if (updateStatus == UpdateStatus.Yes) {</string>
    <string name="update_return_code">"\@Override
public void onUpdateReturned(int updateStatus, UpdateResponse response) {"</string>
    <string name="update_setting_text1">通过这些设置函数，您可以自定义更新参数，实现不一样的更新方式。</string>
    <string name="update_setting_text2">因为以下这些设置是静态的参数，如果在应用中不止一次调用了检测更新的方法，而每次的设置都不一样，请在每次检测更新的函数之前先恢复默认设置再设置参数，避免在其他地方设置的参数影响到这次更新。</string>
    <string name="update_setting_text3">设置进行更新的网络环境， true(默认)只在wifi环境下检测更新， false在所有网络环境中均检测更新。</string>
    <string name="update_setting_text4_1">设置增量/全量更新， true(默认)使用增量更新， false使用全量更新。</string>
    <string name="update_setting_text4_2">注意：如果旧版本的apk和线上上传过的apk不完全一样，则会请求全量更新。</string>
    <string name="update_setting_text5">设置自动弹出更新提示，如果您要自己处理更新回调，选择自己对用户进行更新提示，请关闭自动弹出提示，避免重复弹出提示。</string>
    <string name="update_setting_text6">"设置更新提示方式，我们默认的更新提示方式有两种：对话框提示和通知栏提示，通过该方法设置更新提示的样式。
UpdateStatus.STYLE_DIALOG(默认)使用对话框进行更新提示，
UpdateStatus.STYLE_NOTIFICATION使用通知栏进行更新提示。"</string>
    <string name="update_setting_text7">设置更新下载通知栏是否启动高级样式，高级样式在4.1及以上系统中会显示暂停/继续，取消按钮。</string>
    <string name="update_toast_yes">Toast.makeText(context, 发现更新, Toast.LENGTH_SHORT).show();</string>
    <string name="wifi_only_text_true">UmengUpdateAgent.setUpdateOnlyWifi(true);</string>
</resources>