<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="#ff000000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/update_process_text1" />
        <TextView android:textColor="#ff000000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/update_process_text2" />
        <TextView android:textColor="#ffff0000" android:id="@+id/auto_popup_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/auto_popup_text_true" />
        <RadioGroup android:orientation="horizontal" android:id="@+id/auto_popup_radiogroup" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RadioButton android:id="@+id/btn_auto_popup_true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/true_text" />
            <RadioButton android:id="@+id/btn_auto_popup_false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/false_text" />
        </RadioGroup>
        <LinearLayout android:orientation="vertical" android:id="@+id/update_listener_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="#ff000000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/update_process_text3" />
            <TextView android:textColor="#ffff0000" android:id="@+id/update_listener_code" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update_listener_null" />
            <CheckBox android:textColor="#ff000000" android:id="@+id/update_listener_check" android:layout_width="fill_parent" android:layout_height="32.0dip" android:button="@drawable/umeng_update_button_check_selector" android:text="@string/update_listener_text" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@+id/check_update_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="#ff000000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/update_process_text4" />
            <TextView android:textColor="#ffff0000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/auto_update_code" />
            <Button android:id="@+id/umeng_example_update_btn_check_update" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_check" />
        </LinearLayout>
        <RelativeLayout android:id="@+id/update_return_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="#ff000000" android:id="@+id/update_process_text5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/update_process_text5" />
            <TextView android:textColor="#ffff0000" android:id="@+id/update_return_code1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/update_return_code" android:layout_below="@id/update_process_text5" />
            <TextView android:textColor="#ffff0000" android:id="@+id/code_space_text1" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/code_space" android:layout_below="@id/update_return_code1" />
            <TextView android:textColor="#ffff0000" android:id="@+id/update_result_code" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/update_result_yes" android:layout_toRightOf="@id/code_space_text1" android:layout_below="@id/update_return_code1" />
            <TextView android:textColor="#ffff0000" android:id="@+id/code_space_text2" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/code_space" android:layout_toRightOf="@id/code_space_text1" android:layout_below="@id/update_result_code" />
            <LinearLayout android:orientation="vertical" android:id="@+id/update_process_code_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toRightOf="@id/code_space_text2" android:layout_below="@id/update_result_code">
                <TextView android:textColor="#ffff0000" android:id="@+id/update_toast_code" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/update_toast_yes" />
                <TextView android:textColor="#ffff0000" android:id="@+id/update_show_ui_code" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/show_dialog_code" />
            </LinearLayout>
            <TextView android:textColor="#ffff0000" android:id="@+id/update_result_end_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/update_code_end" android:layout_toRightOf="@id/code_space_text1" android:layout_below="@id/update_process_code_layout" />
            <TextView android:textColor="#ffff0000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/update_code_end" android:layout_below="@id/update_result_end_text" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:id="@+id/diy_update_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update_process_text6" />
            <RadioGroup android:orientation="horizontal" android:id="@+id/update_plan_radiogroup" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RadioButton android:id="@+id/btn_default" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update_default" />
                <RadioButton android:id="@+id/btn_custom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update_custom" />
            </RadioGroup>
            <LinearLayout android:orientation="vertical" android:id="@+id/update_default_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update_process_text7" />
                <TextView android:textColor="#ffff0000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show_dialog_code" />
                <Button android:id="@+id/umeng_example_update_btn_show_dialog" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_show_dialog" />
                <TextView android:textColor="#ffff0000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show_notification_code" />
                <Button android:id="@+id/umeng_example_update_btn_show_notification" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_show_notification" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/update_custom_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update_process_text8" />
                <TextView android:textColor="#ffff0000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/is_ignore_code" />
                <Button android:id="@+id/umeng_example_update_btn_is_ignore" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_is_ignore" />
                <TextView android:textColor="#ffff0000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/download_file_code" />
                <Button android:id="@+id/umeng_example_update_btn_download_file" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_download_file" />
                <TextView android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update_process_text9" />
                <Button android:id="@+id/umeng_example_update_btn_show_ui" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_show_ui" />
                <TextView android:textColor="#ff000000" android:id="@+id/update_tip_text" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:textColor="#ffff0000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start_download_code" />
                <Button android:id="@+id/umeng_example_update_btn_start_download" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_start_download" />
                <TextView android:textColor="#ffff0000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start_install_code" />
                <Button android:id="@+id/umeng_example_update_btn_start_install" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_start_install" />
                <TextView android:textColor="#ffff0000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ignore_update_code" />
                <Button android:id="@+id/umeng_example_update_btn_ignore_update" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_ignore_update" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>