<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="#ff000000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/manual_update_text1" />
    <TextView android:textColor="#ffff0000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/manual_update_code" />
    <Button android:layout_gravity="center_horizontal" android:id="@+id/umeng_example_update_btn_check_update" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/btn_check" />
</LinearLayout>