<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:clickable="true" android:layout_width="280.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="20.0sp" android:textColor="#ff333333" android:id="@+id/title" android:padding="5.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prompt" />
        <TextView android:textSize="18.0sp" android:textColor="#ff333333" android:gravity="center_horizontal" android:id="@+id/alert_message" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_marginBottom="20.0dip" />
        <EditText android:textSize="16.0sp" android:textColor="#ff444444" android:id="@+id/edit" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:singleLine="true" />
        <ImageView android:id="@+id/image" android:visibility="gone" android:layout_width="160.0dip" android:layout_height="160.0dip" android:scaleType="fitCenter" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="16.0sp" android:textColor="#ff666666" android:gravity="center" android:id="@+id/btn_cancel" android:background="@drawable/btn_cancel_bj" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="47.0dip" android:layout_margin="10.0dip" android:text="@string/cancel" android:layout_weight="1.0" android:onClick="cancel" />
        <Button android:textSize="16.0sp" android:textColor="#ffffffff" android:gravity="center" android:background="@drawable/btn_blue_selector" android:layout_width="fill_parent" android:layout_height="47.0dip" android:layout_margin="10.0dip" android:text="@string/ok" android:layout_weight="1.0" android:onClick="ok" />
    </LinearLayout>
</LinearLayout>